RESOLVED FIXED279550
REGRESSION(281049@main): Causes downward chevron grow on keyboard.io
https://bugs.webkit.org/show_bug.cgi?id=279550
Summary REGRESSION(281049@main): Causes downward chevron grow on keyboard.io
alan
Reported 2024-09-11 16:05:34 PDT
Attachments
[fast-cq]Patch (6.87 KB, patch)
2024-09-11 16:07 PDT, alan
no flags
alan
Comment 1 2024-09-11 16:07:22 PDT
Created attachment 472528 [details] [fast-cq]Patch
EWS
Comment 2 2024-09-12 07:07:14 PDT
Committed 283554@main (71f48505dc0a): <https://commits.webkit.org/283554@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472528 [details].
EWS
Comment 3 2024-09-12 23:32:09 PDT
Committed 283286.36@safari-7620-branch (731b11d42725): <https://commits.webkit.org/283286.36@safari-7620-branch> Reviewed commits have been landed. Closing PR #1764 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.