REGRESSION(281049@main): Causes downward chevron grow on keyboard.io https://bugs.webkit.org/show_bug.cgi?id=279550 <rdar://134454723>

Unreviewed.

Canonical link: https://commits.webkit.org/283554@main